Correct edition URL

--- a/assets/config/edition_config.json
+++ b/assets/config/edition_config.json
@@ -1,7 +1,7 @@
 {
   "editionTitle": "Progetto Saba 2021",
   "badge": "alpha",
-  "editionHome": "http://vbd.humnet.unipi.it/saba/",
+  "editionHome": "https://saba-canzoniere.github.io/evt3prototype/",
   "availableEditionLevels": [
     {
       "id": "diplomatic",
