--- a/assets/config/edition_config.json
+++ b/assets/config/edition_config.json
@@ -1,7 +1,7 @@
 {
-  "editionTitle": "Progetto Saba 2021",
+  "editionTitle": "My Digital Edition",
   "badge": "alpha",
-  "editionHome": "https://saba-canzoniere.github.io/evt3prototype/",
+  "editionHome": "evt.labcd.unipi.it/",
   "availableEditionLevels": [
     {
       "id": "diplomatic",
@@ -107,7 +107,7 @@
   ],
   "notSignificantVariants": ["type=orthographic"],
   "defaultEdition": "diplomatic",
-  "defaultViewMode": "documentalMixed",
+  "defaultViewMode": "collation",
   "proseVersesToggler": true,
   "defaultTextFlow": "prose",
   "verseNumberPrinter": 5,
@@ -155,7 +155,7 @@
       "strato-5": "#100077"
     }
   },
-  "defaultImageZoomLevel": 1.0,
+  "defaultImageZoomLevel": 0.8,
   "showSubstitutionMarker": true,
   "multiPageEngineForCriticalEdition": false
 }
