--- a/assets/config/edition_config.json
+++ b/assets/config/edition_config.json
@@ -107,9 +107,9 @@
     }
   ],
   "notSignificantVariants": ["type=orthographic"],
-  "defaultEdition": "diplomatic",
-  "defaultViewMode": "collation",
-  "proseVersesToggler": true,
+  "defaultEdition": "changesView",
+  "defaultViewMode": "documentalMixed",
+  "proseVersesToggler": false,
   "defaultTextFlow": "prose",
   "verseNumberPrinter": 5,
   "readingColorLight": "rgb(208, 220, 255)",
