test nuovo tema, configurazione

--- a/assets/config/edition_config.json
+++ b/assets/config/edition_config.json
@@ -144,7 +144,7 @@
   "sourcesExcludedFromListByParent": ["desc"],
   "showSubstitutionMarker": true,
   "showSeparatorBetweenChanges": true,
-  "startingFromDefinitiveLayer": true,
+  "startingFromDefinitiveLayer": false,
   "showChangeLayerMarkerInText": true,
   "changeSequenceView": {
     "showVarSeqAttr": false,
