--- a/assets/config/ui_config.json
+++ b/assets/config/ui_config.json
@@ -12,7 +12,7 @@
 			"iconSet": "evt",
 			"id": "imageText",
 			"label": "Image Text",
-			"enable": false
+			"enable": true
 		},
 		{
 			"icon": "txtTxt",
