--- a/assets/config/ui_config.json
+++ b/assets/config/ui_config.json
@@ -1,6 +1,20 @@
 {
 	"availableViewModes": [
 		{
+			"icon": "images",
+			"iconSet": "fas",
+			"id": "imageImage",
+			"label": "Images",
+			"enable": false
+		},
+		{
+			"icon": "image",
+			"iconSet": "fas",
+			"id": "imageOnly",
+			"label": "Image only",
+			"enable": false
+		},
+		{
 			"icon": "txt",
 			"iconSet": "evt",
 			"id": "readingText",
@@ -56,7 +70,7 @@
 		{
 			"code": "en",
 			"label": "languageEn",
-			"": true
+			"enable": true
 		},
 		{
 			"code": "it",
@@ -68,5 +82,6 @@
 	"initNavBarOpened": true,
 	"thumbnailsButton": true,
 	"viscollButton": true,
-	"theme": "modern"
+	"theme": "modern",
+	"syncZonesHighlightButton": true
 }
